[FIX] web: limit width of search bar favorites
With long favorite names, the search menu overflows to the left of the
screen

Steps to reproduce:
1. Install any app with a search bar (e.g. CRM)
2. Open the app and save the current search as a favorite, enter a
   really long name (200 characters or more)
3. The search left side of the search bar is not visible anymore

Solution:
Limit the width of the search bar menu and of the favorite menu. The
purpose of the maximum width on the search bar menu is for a correct
display in mobile view. We also take into account the comparison menu
(that can be displayed if you add a filter on creation date)

opw-3442705

closes odoo/odoo#138404

X-original-commit: 107f496b5e67ca3293e2c63a273cf8c491187fb5

--- a/addons/web/static/src/search/search_bar_menu/search_bar_menu.scss
+++ b/addons/web/static/src/search/search_bar_menu/search_bar_menu.scss
@@ -1,6 +1,9 @@
 // SearchBar Menu
 // ============================================================================
 .o_search_bar_menu {
+    $-menu-max-width: calc(100vw - #{map-get($spacers, 3) * 2 });
+
+    max-width: $-menu-max-width;
     .o_dropdown_container {
         border-color: $dropdown-divider-bg !important;
         min-width: 220px;
@@ -10,5 +13,15 @@
         max-width: 17ch;
         text-overflow: ellipsis;
         white-space: nowrap;
+    }
+
+    @include media-breakpoint-up(lg) {
+        .o_favorite_menu {
+            max-width: calc(#{$-menu-max-width} / 3);
+        }
+
+        .o_comparison_menu + .o_favorite_menu {
+            max-width: calc(#{$-menu-max-width} / 4);
+        }
     }
 }
